--- a/movieProject.html
+++ b/movieProject.html
@@ -43,6 +43,7 @@
         </div>
     </div>
 </header>
+<!--accordion cards list will appear below here-->
 <div id="accordion">
     <div class="card">
         <div class="card-header" id="headingOne">
@@ -53,7 +54,7 @@
             </h5>
         </div>
 
-        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
             <div class="card-body">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus deserunt laborum molestiae neque nihil nisi numquam ratione sed. Eveniet exercitationem incidunt inventore iusto, laborum magni molestiae odit provident quod rem? Ad assumenda, at beatae corporis cum deleniti dolore dolorem doloremque ducimus eius excepturi exercitationem expedita explicabo facere fugiat impedit inventore iste itaque, labore, maxime modi molestias mollitia necessitatibus neque officia omnis perferendis praesentium quis repellat repellendus sequi tempora tempore temporibus vel veritatis voluptatem voluptatum. A ab asperiores atque </p>
                 <p>Actor, Actor, Actor, Actor</p>
