feat: js html template finished

--- a/movieProject.html
+++ b/movieProject.html
@@ -56,8 +56,16 @@
 
         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
             <div class="card-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus deserunt laborum molestiae neque nihil nisi numquam ratione sed. Eveniet exercitationem incidunt inventore iusto, laborum magni molestiae odit provident quod rem? Ad assumenda, at beatae corporis cum deleniti dolore dolorem doloremque ducimus eius excepturi exercitationem expedita explicabo facere fugiat impedit inventore iste itaque, labore, maxime modi molestias mollitia necessitatibus neque officia omnis perferendis praesentium quis repellat repellendus sequi tempora tempore temporibus vel veritatis voluptatem voluptatum. A ab asperiores atque </p>
-                <p>Actor, Actor, Actor, Actor</p>
+                <div class="card-body">
+                    <div class="row cardText">
+                        <div class="col">
+                            <img class="col" id="moviePoster" src="https://www.uphe.com/sites/default/files/styles/scale__344w_/public/Spartacus_PosterArt.jpg?itok=DN58WtLt">
+                        </div>
+                            <div class="col-9">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus deserunt laborum molestiae neque nihil nisi numquam ratione sed. Eveniet exercitationem incidunt inventore iusto, laborum magni molestiae odit provident quod rem? Ad assumenda, at beatae corporis cum deleniti dolore dolorem doloremque ducimus eius excepturi exercitationem expedita explicabo facere fugiat impedit inventore iste itaque, labore, maxime modi molestias mollitia necessitatibus neque officia omnis perferendis praesentium quis repellat repellendus sequi tempora tempore temporibus vel veritatis voluptatem voluptatum. A ab asperiores atque </p>
+                        <p>Actor, Actor, Actor, Actor</p>
+                        </div>
+                    </div>
                 <table class="table">
                     <thead>
                     <tr>
