feat: Trying to get the AJax libray to work on line 2

--- a/movieProject-list.html
+++ b/movieProject-list.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="css/movieProject.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
     <title>Films We Love</title>
 </head>
 <body>
@@ -30,6 +29,7 @@
         </div>
     </div>
 </nav>
+
 <!-- Page Header-->
 <header class="masthead" style="background-image: url('media/filmBanner.png')">
     <div class="container">
@@ -45,8 +45,9 @@
         </div>
     </div>
 </header>
+
 <!--accordion cards list will appear below here-->
-<main id="movies">
+<main id="moviesList">
 
 </main>
 
